# uj-ios

./: README.md
calculator/calculator/: ContentView.swift
calculator/calculator.xcodeproj/: project.pbxproj
calculator/calculator.xcodeproj/project.xcworkspace/xcuserdata/michaldros.xcuserdatad/: UserInterfaceState.xcuserstate
network/client/client/: ContentView.swift  clientApp.swift
network/client/client.xcodeproj/: project.pbxproj
network/server/: main.py  pyproject.toml
oauth/client/client/: ContentView.swift
oauth/client/client.xcodeproj/: project.pbxproj
oauth/server/: main.py  pyproject.toml
payments/client/payments/payments/: ContentView.swift  paymentsApp.swift
payments/client/payments/payments.xcodeproj/: project.pbxproj
payments/client/payments/paymentsTests/: paymentsTests.swift
payments/client/payments/paymentsUITests/: paymentsUITests.swift  paymentsUITestsLaunchTests.swift
payments/server/: main.py  pyproject.toml
shopping-list/Model.xcdatamodeld/Model.xcdatamodel/: contents
shopping-list/shopping-list/: ContentView.swift  shopping_listApp.swift
shopping-list/shopping-list.xcodeproj/: project.pbxproj
shopping-list/shopping-list.xcodeproj/project.xcworkspace/xcuserdata/michaldros.xcuserdatad/: UserInterfaceState.xcuserstate
task-list/task-list/: ContentView.swift  task_listApp.swift
task-list/task-list.xcodeproj/: project.pbxproj
task-list/task-list.xcodeproj/project.xcworkspace/xcuserdata/michaldros.xcuserdatad/: UserInterfaceState.xcuserstate
(+6 files in other folders)
